--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,3 +1,25 @@
-<div>Hola holita!</div>
-<button (click)="login()">Login</button>
-<button (click)="logout()">Logout</button>
+<div class="app-logo">
+NoSpoilerApp
+</div>
+
+<ion-list class="login">
+
+  <ion-item>
+    <ion-input type="text" placeholder="Email"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-input type="password" placeholder="Password"></ion-input>
+  </ion-item>
+
+
+  <button ion-button class="btn login__button" (click)="login(authTypeEnum.email)">Sign In</button>
+  <button ion-button class="btn register__button" (click)="goToRegister()">Register</button>
+
+
+</ion-list>
+<section class="social-login">
+  <button ion-button class="btn social-login__button" (click)="login(authTypeEnum.google)">Google</button>
+  <button ion-button class="btn social-login__button" (click)="login(authTypeEnum.facebook)">Facebook</button>
+  <button ion-button class="btn social-login__button" (click)="login(authTypeEnum.twitter)">Twitter</button>
+</section>
